retrieveUnpackaged/objects/Monitoring_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Actual_Date__c</fullName>
        <label>Activity Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidential_Observations__c</fullName>
        <label>Confidential Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initiating_Office__c</fullName>
        <label>Initiating Office</label>
        <picklist>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_Activity_Status__c</fullName>
        <label>Monitoring Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_Activity__c</fullName>
        <label>Monitoring Activity</label>
        <picklist>
            <picklistValues>
                <fullName>On-site Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-Up Compliance Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site Training/Technical Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted/Issue-based Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawdown Analysis</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_FY__c</fullName>
        <label>Monitoring FY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Plan__c</fullName>
        <label>Monitoring Plan</label>
        <referenceTo>Monitoring_Plan__c</referenceTo>
        <relationshipLabel>Monitoring Activities</relationshipLabel>
        <relationshipName>Monitoring_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Observation_Comments__c</fullName>
        <label>Observation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_responsible_monitoring_activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff responsible monitoring activity</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Monitoring_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Month__c</fullName>
        <label>Target Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Monitoring Activity</label>
    <nameField>
        <label>Monitoring Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monitoring Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>